apps/home-monitor-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: climate-monitor-frontend
  labels:
    app: climate-monitor-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: climate-monitor-frontend
