apps/home-monitor-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climate-monitor-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: climate-monitor.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: climate-monitor-frontend
            port:
              number: 80
